handbook: Remove mergemaster usage in update process
PR:		252417
Reviewed by:	emaste
Differential Revision: https://reviews.freebsd.org/D43119

--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -146,10 +146,9 @@ MergeChanges /etc/ /var/named/etc/ /boot/device.hints
 ....
 
 List of directories with configuration files that `freebsd-update` should attempt to merge.
-The file merge process is a series of man:diff[1] patches similar to man:mergemaster[8], but with fewer options.
+The file merge process is a series of man:diff[1] patches.
 Merges are either accepted, open an editor, or cause `freebsd-update` to abort.
 When in doubt, backup [.filename]#/etc# and just accept the merges.
-See man:mergemaster[8] for more information about `mergemaster`.
 
 [.programlisting]
 ....
@@ -985,7 +984,7 @@ Any modified configuration files are merged with the new versions, outdated libr
 
 man:etcupdate[8] is a tool for managing updates to files that are not updated as part of an installworld such as files located in [.filename]#/etc/#.
 It manages updates by doing a three-way merge of changes made to these files against the local versions.
-It is also designed to minimize the amount of user intervention, in contrast to man:mergemaster[8]'s interactive prompts.
+man:etcupdate[8] is designed to minimize the amount of user intervention.
 
 [NOTE]
 ====
@@ -1022,28 +1021,6 @@ To prevent this, perform the following steps *before* updating sources and build
 
 <.> Check the diff after bootstrapping. Trim any local changes that are no longer needed to reduce the chance of conflicts in future updates.
 ====
-
-[[updating-src-completing-merge-mergemaster]]
-==== Merging Configuration Files with man:mergemaster[8]
-
-man:mergemaster[8] provides a way to merge changes that have been made to system configuration files with new versions of those files.
-man:mergemaster[8] is an alternative to the preferred man:etcupdate[8]
-With `-Ui`, man:mergemaster[8] automatically updates files that have not been user-modified and installs new files that are not already present:
-
-[source,shell]
-....
-# mergemaster -Ui
-....
-
-If a file must be manually merged, an interactive display allows the user to choose which portions of the files are kept.
-See man:mergemaster[8] for more information.
-
-If the standard [.filename]#/usr/src# was not used, another parameter must be passed to man:mergemaster[8]:
-
-[source,shell]
-....
-# mergemaster -Ui PATH_TO_SRC
-....
 
 [[updating-src-completing-check-old]]
 ==== Checking for Outdated Files and Libraries
@@ -1136,7 +1113,7 @@ On the build machine, build the kernel and world as described in <<makeworld>>,
 but do not install anything on the build machine.
 Instead, install the built kernel on the test machine.
 On the test machine, mount [.filename]#/usr/src# and [.filename]#/usr/obj# via NFS.
-Then, run `shutdown now` to go to single-user mode in order to install the new kernel and world and run `mergemaster` as usual.
+Then, run `shutdown now` to go to single-user mode in order to install the new kernel and world and run `etcupdate` as usual.
 When done, reboot to return to normal multi-user operations.
 
 After verifying that everything on the test machine is working properly,
