handbook: network-servers: Add a section about zeroconf and Avahi
Sponsored by:	Klara, Inc.

--- a/documentation/content/en/books/handbook/network-servers/_index.adoc
+++ b/documentation/content/en/books/handbook/network-servers/_index.adoc
@@ -2007,6 +2007,30 @@ freebsd.org. (A)
 FreeBSD does not provide authoritative name server software in the base system.
 Users are encouraged to install third party applications, like package:dns/nsd[] or package:dns/bind918[] package or port.
 
+[[network-zeroconf]]
+== Zero-configuration networking (mDNS/DNS-SD)
+
+https://en.wikipedia.org/wiki/Zero-configuration_networking[Zero-configuration networking] (sometimes referred to as zeroconf) is a set of technologies, which simplify network configuration by providing:
+
+* automatic assignment of numeric network addresses (mDNS),
+* automatic distribution and resolution of hostnames (mDNS), and
+* automatic discovery of service instances (DNS-SD).
+
+=== Configuring and Starting Avahi
+
+One of the popular implementations of zeroconf is https://avahi.org/[Avahi].
+Avahi can be installed and configured with the following commands:
+
+[source,shell]
+....
+# pkg install avahi-app nss_mdns
+# grep -q '^hosts:.*\<mdns\>' /etc/nsswitch.conf || sed -i "" 's/^hosts: .*/& mdns/' /etc/nsswitch.conf
+# service dbus enable
+# service avahi-daemon enable
+# service dbus start
+# service avahi-daemon start
+....
+
 [[network-apache]]
 == Apache HTTP Server
 
