handbook/network-servers: Escape an example email
Otherwise, you@example.com gets linked with mailto.

Sponsored by:	Klara, Inc.

--- a/documentation/content/en/books/handbook/network-servers/_index.adoc
+++ b/documentation/content/en/books/handbook/network-servers/_index.adoc
@@ -2050,7 +2050,7 @@ The most frequently modified directives are:
 Specifies the default directory hierarchy for the Apache installation.
 Binaries are stored in the [.filename]#bin# and [.filename]#sbin# subdirectories of the server root and configuration files are stored in the [.filename]#etc/apache2x# subdirectory.
 
-`ServerAdmin you@example.com`::
+`ServerAdmin \you@example.com`::
 Change this to the email address to receive problems with the server.
 This address also appears on some server-generated pages, such as error documents.
 
