Document __FreeBSD_version values 1303503, and 1400505 through 1400510.

--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -604,15 +604,40 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |January 7, 2024
 |14.0-STABLE after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-17.0.6-0-g6009708b4367, a.k.a. 17.0.6 release.
 
+|1400505
+|gitref:64e869e9b93c8ce47f874b770df696c06bcba0d3[repository="src",length=12]
+|January 7, 2024
+|14.0-STABLE after adding adding man:vnode_pager_clean_async[9] and man:vnode_pager_clean_sync[9].
+
+|1400506
+|gitref:d9041710958227194c5e34b169ae73d7ad411017[repository="src",length=12]
+|January 19, 2024
+|14.0-STABLE after changing the internal KAPI between the nfscommon and nfscl modules.
+
+|1400507
+|gitref:b566e44b2b88eb9f1b3b658998c7418cccab9e2f[repository="src",length=12]
+|January 31, 2024
+|14.0-STABLE after adding man:kern_openatfp[9] and man:kcmp[2].
+
+|1400508
+|gitref:2d120981e26dfef5c9cb9eb9936bb46cb6918136[repository="src",length=12]
+|February 18, 2024
+|14.0-STABLE after LinuxKPI updates.
+
 |1400509
 |gitref:b392b36d3776b696601ce0253256803276d24ea2[repository="src",length=12]
 |February 18, 2024
 |14.0-STABLE after changing net80211 `struct ieee80211vap` internals.
 
-|1400509
+|1400510
 |gitref:69da6e0879831f1ccc5c60135ed43fcea10a933b[repository="src",length=12]
 |March 23, 2024
 |14.0-STABLE after fixing a clang assertion or crash when building recent boost libraries.
+
+|1400511
+|gitref:7c41358a2b0a2e70a2b61ec347354f3452e4d2f3[repository="src",length=12]
+|April 20, 2024
+|14.0-STABLE after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-18.1.3-0-gc13b7485b879, a.k.a. 18.1.3 release.
 
 |===
 
@@ -1616,6 +1641,11 @@ Template:
 |gitref:07839ae99c06fcbebd5da6ead49c160c32046542[repository="src",length=12]
 |March 23, 2024
 |13.3-STABLE after fixing a clang assertion or crash when building recent boost libraries.
+
+|1303503
+|gitref:055e875e6077ed1eb2256c3ab5de59a3f6fbce18[repository="src",length=12]
+|April 20, 2024
+|13.3-STABLE after upgrading llvm, clang, compiler-rt, libc++, libunwind, lld, lldb and openmp to llvmorg-18.1.3-0-gc13b7485b879, a.k.a. 18.1.3 release.
 
 |===
 
