--- a/documentation/content/en/books/porters-handbook/versions/_index.adoc
+++ b/documentation/content/en/books/porters-handbook/versions/_index.adoc
@@ -607,7 +607,7 @@ Here is a convenient list of `__FreeBSD_version` values as defined in https://cg
 |1400505
 |gitref:64e869e9b93c8ce47f874b770df696c06bcba0d3[repository="src",length=12]
 |January 7, 2024
-|14.0-STABLE after adding adding man:vnode_pager_clean_async[9] and man:vnode_pager_clean_sync[9].
+|14.0-STABLE after adding man:vnode_pager_clean_async[9] and man:vnode_pager_clean_sync[9].
 
 |1400506
 |gitref:d9041710958227194c5e34b169ae73d7ad411017[repository="src",length=12]
