bhyve.adoc: Fix a mailto macro
Mail address was used instead of the committer's name, contrary to
what is done for all other contributors in the list.

--- a/website/content/en/status/report-2024-01-2024-03/bhyve.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/bhyve.adoc
@@ -58,7 +58,7 @@ If you want to know more about our work, come join us at one of Michael Dexter's
 
 ==== Documentation ===
 
-We managed to update a few parts of the Handbook and Porter's Handbook (thanks to mailto:emaste@FreeBSD.org[Ed Maste], mailto:jrm@FreeBSD.org[Joseph Mingrone], mailto:pauamma@gundo.com[Pau Amma], and mailto:rgrimes@FreeBSD.org[rgrimes@FreeBSD.org]):
+We managed to update a few parts of the Handbook and Porter's Handbook (thanks to mailto:emaste@FreeBSD.org[Ed Maste], mailto:jrm@FreeBSD.org[Joseph Mingrone], mailto:pauamma@gundo.com[Pau Amma], and mailto:rgrimes@FreeBSD.org[Rodney W. Grimes]):
 
 * several improvements and expansions to the virtualization chapter in the FreeBSD Handbook
 ** using a man:bhyve_config|5] configuration file
