Status/2024Q1/freebsd-foundation.adoc: Minor fixes
- Consistent lists
- Use mailto macros

--- a/website/content/en/status/report-2024-01-2024-03/freebsd-foundation.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/freebsd-foundation.adoc
@@ -16,11 +16,11 @@ We are 100% supported by donations from individuals and corporations and those i
 
 * Software development projects to implement features and functionality in FreeBSD
 * Sponsor and organize conferences and developer summits to provide collaborative opportunities and promote FreeBSD
-* Purchase and support of hardware to improve and maintain FreeBSD infrastructure,
-* Resources to improve security, quality assurance, and continuous integration efforts.
-* Materials and staff needed to promote, educate, and advocate for FreeBSD.
-* Collaboration between commercial vendors and FreeBSD developers.
-* Representation of the FreeBSD Project in executing contracts, license agreements, and other legal arrangements that require a recognized legal entity.
+* Purchase and support of hardware to improve and maintain FreeBSD infrastructure
+* Resources to improve security, quality assurance, and continuous integration efforts
+* Materials and staff needed to promote, educate, and advocate for FreeBSD
+* Collaboration between commercial vendors and FreeBSD developers
+* Representation of the FreeBSD Project in executing contracts, license agreements, and other legal arrangements that require a recognized legal entity
 
 ==== Operations
 We kicked off the new year with ambitious goals to help move the FreeBSD Project forward by identifying features and functionality to support in the operating system and increasing our advocacy efforts to increase and expand the visibility of FreeBSD.
@@ -35,13 +35,13 @@ During the first quarter of 2024, 180 src, 65 ports, and 18 doc tree commits ide
 Three new projects began this quarter.
 
 * Work began to improve FreeBSD's audio stack and provide audio developers with useful tools and frameworks to make sound development on FreeBSD easier.
-  Read more in Christos Margiolis's (christos@'s) <<_audio_stack_improvements,Audio Stack Improvements>> report entry.
+  Read more in mailto:christos@FreeBSD.org[Christos Margiolis] <<_audio_stack_improvements,Audio Stack Improvements>> report entry.
 
-* Olivier Certner (olce@) began his second contract with the Foundation, and this time around, the main goal is to make unionfs stable and useful on FreeBSD.
+* mailto:olce@FreeBSD.org[Olivier Certner] began his second contract with the Foundation, and this time around, the main goal is to make unionfs stable and useful on FreeBSD.
   Other work may include revamping VFS lookups, improving out-of-memory handling, implementing a notification system for en-masse detection of filesystem changes such as inotify, and improving console usability.
 
 * This quarter, a new project to add hierarchical rate limits to the OpenZFS file system began.
-  Pawel Dawidek (pjd@) will add support for limits that will be configurable, similar to quotas, but would limit the number of read/write operations and read/write bandwidth.
+  mailto:pjd@FreeBSD.org[Pawel Dawidek] will add support for limits that will be configurable, similar to quotas, but would limit the number of read/write operations and read/write bandwidth.
 
 Six projects continued this quarter.
 
@@ -52,15 +52,15 @@ Six projects continued this quarter.
 
 * A new joint project began between Advanced Micro Devices (AMD) and The FreeBSD Foundation to develop a complete FreeBSD AMD IOMMU driver.
   This work will allow FreeBSD to fully support greater than 256 cores with features such as CPU mapping and will also include bhyve integration.
-  For those interested in the technical details, follow Konstantin Belousov's (kib@'s) commits tagged with Sponsored by fields for Advanced Micro Devices (AMD) and The FreeBSD Foundation.
+  For those interested in the technical details, follow mailto:kib@FreeBSD.org[Konstantin Belousov] commits tagged with Sponsored by fields for Advanced Micro Devices (AMD) and The FreeBSD Foundation.
 
 * Refer to Pierre Pronchery's <<_graphical_installer_for_freebsd,Graphical Installer for FreeBSD>> report entry to read about the status of FreeBSD's new graphical installer.
 
 * Work continues to port the Vector Packet Processor (VPP) to FreeBSD.
   VPP is an open-source, high-performance user space networking stack that provides fast packet processing suitable for software-defined networking and network function virtualization applications.
-  Look for a pending article from the developer working on the project, Tom Jones (thj@), that details the experience of porting VPP to FreeBSD.
+  Look for a pending article from the developer working on the project, mailto:thj@FreeBSD.org[Tom Jones], that details the experience of porting VPP to FreeBSD.
 
-* Björn Zeeb (bz@) and Cheng Cui (cc@) continue their wireless work.
+* mailto:bz@FreeBSD.org[Björn Zeeb] and mailto:cc@FreeBSDd.org[Cheng Cui] continue their wireless work.
   This quarter was mostly focused on bug fixes and stability improvements to LinuxKPI 802.11 and net80211.
   Much of this work made it into the 13.3 release.
 
@@ -93,11 +93,11 @@ As a community, every conversation we have with people outside the BSD communiti
 
 To this end, the Foundation is working on a FreeBSD Impact Report that will aggregate the core and often mission critical role FreeBSD plays in society, from embedded systems powered by QNX, to payments and check processing, to digital entertainment, internet and cybersecurity infrastructure.
 
-Our community is stepping up in innumerable ways, including to make sure FreeBSD supports industry-standard containerized workloads - check out the link:https://github.com/opencontainers/wg-freebsd-runtime[Open Container Initiative FreeBSD runtime extension working group].
+Our community is stepping up in innumerable ways, including to make sure FreeBSD supports industry-standard containerized workloads -- check out the link:https://github.com/opencontainers/wg-freebsd-runtime[Open Container Initiative FreeBSD runtime extension working group].
 
 The recently-opened hardware vendor support survey will feed into a hardware support guide that reflects the collective experience of all respondents that is intended to help everyone identify hardware vendors that prioritize FreeBSD; it will also help focus Partnerships' outreach on the priority vendors.
 
-To close, please *TELL THE WORLD YOU USE FREEBSD AND WHY. There is no wrong way to do this* - put it on your blog, on your favorite social media channel, list FreeBSD on your company’s Open Source page, contact the Foundation about a Case Study, etc.
+To close, please *TELL THE WORLD YOU USE FREEBSD AND WHY. There is no wrong way to do this* -- put it on your blog, on your favorite social media channel, list FreeBSD on your company’s Open Source page, contact the Foundation about a Case Study, etc.
 
 link:https://www.stormshield.com/news/a-short-history-of-open-source/[Stormshield, a leading cybersecurity company based in Europe, provides a great example of how vendors that use FreeBSD can do this]. The footer of their blogs says: "A strong supporter of Open Source, Stormshield is an active member (and sponsor) of the FreeBSD community...Whenever we modify Open Source software, make patches or add features, we offer them to the community for inclusion."
 
@@ -107,16 +107,17 @@ We welcomed link:https://freebsdfoundation.org/blog/kim-mcmahon-to-join-freebsd-
 Just some of our expanded Q1 efforts to support FreeBSD are below.
 
 * Began work planning the on the link:https://freebsdfoundation.org/news-and-events/event-calendar/may-2024-freebsd-developer-summit/[May 2024 FreeBSD Developer Summit], co-located with BSDCan, taking place May 29-30, 2024 in Ottawa, Canada
-* Introduced FreeBSD to new and returning folks at link:https://stateofopencon.com/soocon-2024/[State of Open Con 24] in London, UK, February 6-7, 2024.
-* Held an Introduction to FreeBSD half-day workshop and staffed a booth at link:https://www.socallinuxexpo.org/scale/21x[SCaLE21x], which took place March 14-17, 2024 in Pasadena, CA. Thanks to Gordon Tetlow for his help with the workshop.
-* The Foundation team also worked on a common message on the improvement and benefits of FreeBSD to ensure consistency between the FreeBSD Foundation and Core Team.
+* Introduced FreeBSD to new and returning folks at link:https://stateofopencon.com/soocon-2024/[State of Open Con 24] in London, UK, February 6-7, 2024
+* Held an Introduction to FreeBSD half-day workshop and staffed a booth at link:https://www.socallinuxexpo.org/scale/21x[SCaLE21x], which took place March 14-17, 2024 in Pasadena, CA.
+  Thanks to Gordon Tetlow for his help with the workshop
+* The Foundation team also worked on a common message on the improvement and benefits of FreeBSD to ensure consistency between the FreeBSD Foundation and Core Team
 * Members of the Foundation team served as Administrators for the 2024 Google Summer of Code.
   This year marks the 20th anniversary of Google Summer of Code and the 20th year that the link:https://freebsdfoundation.org/blog/the-freebsd-project-participating-in-google-summer-of-code-2024-2/[FreeBSD Project was accepted as a mentoring organization].
-  The Project received 23 applications from prospective interns.
+  The Project received 23 applications from prospective interns
 * Provided an link:https://freebsdfoundation.org/blog/freebsd-13-3-whats-new-and-how-did-we-get-here/[overview of FreeBSD 13.x] including the 13.3 release
 * Worked on the final report of the 2024 FreeBSD Community Survey.
-  Be on the lookout for the report at the end of April.
-* In partnership with Innovate UK and Digital Security by Design (DSbD), the Foundation held the first annual link:https://www.globenewswire.com/news-release/2024/04/03/2856691/0/en/FreeBSD-Foundation-and-Digital-Security-by-Design-DSbD-Announce-Beacon-Award-Winners-for-Innovations-and-Improvements-to-CheriBSD.html[Digital Security by Design (DSbD) Ecosystem Beacon Awards] to celebrate innovators working with and enhancing CheriBSD.
+  Be on the lookout for the report at the end of April
+* In partnership with Innovate UK and Digital Security by Design (DSbD), the Foundation held the first annual link:https://www.globenewswire.com/news-release/2024/04/03/2856691/0/en/FreeBSD-Foundation-and-Digital-Security-by-Design-DSbD-Announce-Beacon-Award-Winners-for-Innovations-and-Improvements-to-CheriBSD.html[Digital Security by Design (DSbD) Ecosystem Beacon Awards] to celebrate innovators working with and enhancing CheriBSD
 * Published numerous blogs including:
 ** link:https://freebsdfoundation.org/blog/what-makes-the-freebsd-governance-model-successful/[What Makes the FreeBSD Governance Model Successful]
 ** link:https://freebsdfoundation.org/blog/guiding-the-future-of-freebsd-releases-colin-percival-the-new-release-engineering-team-lead/[Guiding the future of FreeBSD releases: Colin Percival, the new Release Engineering Team Lead]
@@ -124,8 +125,8 @@ Just some of our expanded Q1 efforts to support FreeBSD are below.
 ** link:https://freebsdfoundation.org/news-and-events/latest-news/the-cybersecurity-battle-has-come-to-hardware/[The Cybersecurity Battle Has Come to Hardware]
 ** link:https://freebsdfoundation.org/news-and-events/latest-news/ampere-in-the-wild-how-freebsd-employs-ampere-arm64-servers-in-the-data-center/[Ampere in the Wild: How FreeBSD Employs Ampere Arm64 Servers in the Data Center]
 ** link:https://freebsdfoundation.org/news-and-events/latest-news/isas-and-the-dawning-hardware-security-revolution/[ISAs and the Dawning Hardware Security Revolution]
-** Published the link:https://freebsdfoundation.org/news-and-events/newsletter/march-2024-foundation-update/[March 2024 FreeBSD Update] with a new look.
-** Released the link:https://freebsdfoundation.org/past-issues/freebsd-14-0/[November/December 2023] and link:https://freebsdfoundation.org/past-issues/networking-10th-anniversary/[January/February 2024] issues of the FreeBSD Journal now with HTML versions of the articles.
+** Published the link:https://freebsdfoundation.org/news-and-events/newsletter/march-2024-foundation-update/[March 2024 FreeBSD Update] with a new look
+** Released the link:https://freebsdfoundation.org/past-issues/freebsd-14-0/[November/December 2023] and link:https://freebsdfoundation.org/past-issues/networking-10th-anniversary/[January/February 2024] issues of the FreeBSD Journal now with HTML versions of the articles
 
 ==== Fundraising
 Thank you to everyone who gave us a financial contribution last quarter to help fund our work to support the Project.
