handbook/wayland: create synopsis for consistency

--- a/documentation/content/en/books/handbook/wayland/_index.adoc
+++ b/documentation/content/en/books/handbook/wayland/_index.adoc
@@ -49,7 +49,29 @@ include::../../../../../shared/asciidoctor.adoc[]
 endif::[]
 
 [[wayland-synopsis]]
-== Wayland Synopsis
+== Synopsis
+
+An installation of FreeBSD using bsdinstall does not automatically install a graphical user interface.
+This chapter describes how to select, install, and configure a Wayland compositor, which provides a graphical environment.
+
+Before reading this chapter, you should:
+
+* Know how to install crossref:ports[ports,additional third-party software].
+
+* How to identify and configure crossref:x11[x-graphic-card-drivers,drivers for your graphics hardware].
+
+After reading this chapter, you will know:
+
+* How to configure FreeBSD to host a Wayland graphical environment.
+
+* How to install and configure a Wayland compositor.
+
+* How to run programs designed for the older X Window System.
+
+* How to configure remote desktop access to a Wayland graphical environment.
+
+[[wayland-overview]]
+== Wayland Overview
 Wayland is a new display server, but it differs from Xorg in several important ways.
 First, Wayland is only a protocol that acts as an intermediary between clients using a different mechanism which removes the dependency on an X server.
 Xorg includes both the X11 protocol, used to run remote displays and the X server will accept connections and display windows.
