handbook: move wayland kwin note to desktop/kde

--- a/documentation/content/en/books/handbook/desktop/_index.adoc
+++ b/documentation/content/en/books/handbook/desktop/_index.adoc
@@ -191,6 +191,14 @@ For this to work, the following line is needed in ~/.xinitrc:
 % echo "exec dbus-launch --exit-with-x11 ck-launch-session startplasma-x11" > ~/.xinitrc
 ....
 
+[NOTE]
+====
+As of May, 2021, plasma5-kwin does support Wayland on FreeBSD.
+To use Plasma under Wayland, use the `startplasma-wayland` parameter to `ck-launch-session` and tie in dbus with:
+`dbus-launch --exit-with-x11 ck-launch-session startplasma-wayland`
+to get it working.
+====
+
 [[gnome-environment]]
 === GNOME
 
