--- a/website/content/en/status/report-2024-01-2024-03/bhyve.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/bhyve.adoc
@@ -5,7 +5,7 @@ link:https://callfortesting.org/[bhyve production users calls] URL: link:https:/
 link:https://wiki.freebsd.org/EnterpriseWorkingGroup[FreeBSD Wiki - Enterprise Working Group] URL: link:https://wiki.freebsd.org/EnterpriseWorkingGroup[] +
 link:https://wiki.freebsd.org/ChrisMoerz/bhyve_management[FreeBSD Wiki - EWG - bhyve and jails management tooling] URL: link:https://wiki.freebsd.org/ChrisMoerz/bhyve_management[] +
 link:http://static.bultmann.eu/s6-talk/#(1)[Jan Bramkamp's work on s6rc] URL:http://static.bultmann.eu/s6-talk/#(1)[] +
-link:https://github.com/christian-moerz/vmstated[vmstated on Github] URL: link:https://github.com/christian-moerz/vmstated[] +
+link:https://github.com/christian-moerz/vmstated[vmstated on GitHub] URL: link:https://github.com/christian-moerz/vmstated[] +
 link:https://www.youtube.com/watch?v=f60NCrunXyw[YouTube - vmstated explained] URL: link:https://www.youtube.com/watch?v=f60NCrunXyw[]
 
 Contact: Chris Moerz <freebsd@ny-central.org>
