--- a/website/content/en/status/report-2024-01-2024-03/freebsd-foundation.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/freebsd-foundation.adoc
@@ -95,7 +95,7 @@ To this end, the Foundation is working on a FreeBSD Impact Report that will aggr
 
 Our community is stepping up in innumerable ways, including to make sure FreeBSD supports industry-standard containerized workloads -- check out the link:https://github.com/opencontainers/wg-freebsd-runtime[Open Container Initiative FreeBSD runtime extension working group].
 
-The recently-opened hardware vendor support survey will feed into a hardware support guide that reflects the collective experience of all respondents that is intended to help everyone identify hardware vendors that prioritize FreeBSD; it will also help focus Partnerships' outreach on the priority vendors.
+The recently opened hardware vendor support survey will feed into a hardware support guide that reflects the collective experience of all respondents that is intended to help everyone identify hardware vendors that prioritize FreeBSD; it will also help focus Partnerships' outreach on the priority vendors.
 
 To close, please *TELL THE WORLD YOU USE FREEBSD AND WHY. There is no wrong way to do this* -- put it on your blog, on your favorite social media channel, list FreeBSD on your company’s Open Source page, contact the Foundation about a Case Study, etc.
 
