--- a/website/content/en/status/report-2024-01-2024-03/freshports.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/freshports.adoc
@@ -20,7 +20,7 @@ All of this is useful for both users and developers of ports.
 One of the original features of FreshPorts is notification of ports updates.
 You can create a list of ports and receive notifications about those ports.
 This new feature can also notify when a new package is available for that port.
-The use case: a known security vuln has been patched.
+The use case: a known security vulnerability has been patched.
 FreshPorts will tell you the port has been patched, and then you wait for the package.
 This new feature will tell you when that package is available.
 
