--- a/website/content/en/status/report-2024-01-2024-03/wireless.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/wireless.adoc
@@ -15,7 +15,7 @@ Massive thanks to everyone who tested, reported back, updated PRs and helped oth
 
 I have also slowly started to "categorise" more (old) wireless problem reports and will try to continue with some spring cleaning throughout the year.
 
-If you have questions or feedback please use the link:freebsd-wireless mailing list[https://lists.freebsd.org/subscription/freebsd-wireless].
+If you have questions or feedback please use the link:https://lists.freebsd.org/subscription/freebsd-wireless[freebsd-wireless mailing list].
 That way everyone will see, be able to join in, and the answers will be publicly archived.
 
 Sponsor: minipci.biz (BE200 hardware)
