--- a/website/content/en/status/report-2024-01-2024-03/libsys.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/libsys.adoc
@@ -17,7 +17,7 @@ I landed the first batch of changes on February 5th.
 Since then I have made a number of refinements to the way we link `libsys` as well as which symbols are provided in which library.
 
 Thanks to mailto:kib@FreeBSD.org[Konstantin Belousov] for many rounds of review and feedback as well as runtime linker fixes.
-Thanks to mailto:markj@FreeBSD.org[Mark Johnston] for runtime linker debugging and mailto:dim@FreeBSD.org[Dimitry Andric] for sanitizer fixes.  
+Thanks to mailto:markj@FreeBSD.org[Mark Johnston] for runtime linker debugging and mailto:dim@FreeBSD.org[Dimitry Andric] for sanitizer fixes.
 Thanks also to everyone who reported bugs and helped debug issues.
 
 ==== Known issues (as of the end of the reporting period)
@@ -31,7 +31,8 @@ Thanks also to everyone who reported bugs and helped debug issues.
  * Update man:intro[2] for `libsys`.
  * Finalize the ABI.
    I am likely to reduce the set of `_` (underscore) prefixed symbols we expose.
- * MFC the existence of `libsys`?  It is not clear this is practical, but it might be possible to MFC something useful for language runtimes.
+ * MFC the existence of `libsys`?
+   It is not clear this is practical, but it might be possible to MFC something useful for language runtimes.
 
 ==== Help wanted
 
