--- a/website/content/en/status/report-2024-01-2024-03/clusteradm.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/clusteradm.adoc
@@ -30,7 +30,7 @@ The hardware and network connection have been generously provided by:
 * https://www.kddi-webcommunications.co.jp/english/[KDDI Web Communications Inc]
 * https://www.mohe.gov.my/en/services/research/myren[Malaysian Research & Education Network]
 * https://www.metapeer.com/[MetaPeer]
-* https://www.nyi.net/[New York Internet] (new since 2024Q1)
+* https://www.nyi.net/[New York Internet]
 * https://nic.br/[NIC.br]
 * https://www.teleservice.net/[Teleservice Skåne AB] (new since 2023Q4)
 * https://your.org/[Your.Org]
