--- a/website/content/en/status/report-2024-01-2024-03/clusteradm.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/clusteradm.adoc
@@ -11,8 +11,7 @@ In this quarter, the team has worked on the following:
 
 * Regular support for FreeBSD.org user accounts.
 * Regular disk and parts support (and replacement) for all physical hosts and mirrors.
-* Set up a new mirror in Chicago.
-More details are provided https://freebsdfoundation.org/blog/powering-up-the-future-the-new-freebsd-cluster-in-chicago/[here].
+* https://freebsdfoundation.org/blog/powering-up-the-future-the-new-freebsd-cluster-in-chicago/[Set up a new mirror in Chicago].
 
 ==== FreeBSD Official Mirrors Overview
 
@@ -34,4 +33,10 @@ The hardware and network connection have been generously provided by:
 * https://nic.br/[NIC.br]
 * https://www.teleservice.net/[Teleservice Skåne AB] (new since 2023Q4)
 * https://your.org/[Your.Org]
+
+New official mirrors are always welcome. We have noted the benefits of hosting single mirrors at Internet Exchange Points globally, as evidenced by our existing mirrors in Australia, Brazil, and South Africa.
+If you are affiliated with or know of any organizations willing to sponsor a single mirror server, please contact us.
+We are particularly interested in locations on the United States West Coast and throughout Europe.
+
+See link:https://wiki.freebsd.org/Teams/clusteradm/generic-mirror-layout[generic mirrored layout] for full mirror site specs and link:https://wiki.freebsd.org/Teams/clusteradm/tiny-mirror[tiny-mirror] for a single mirror site.
 
