status/2024q1/clusteradm: Make the whole paragraph one sentence per line

--- a/website/content/en/status/report-2024-01-2024-03/clusteradm.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/clusteradm.adoc
@@ -34,7 +34,8 @@ The hardware and network connection have been generously provided by:
 * https://www.teleservice.net/[Teleservice Skåne AB] (new since 2023Q4)
 * https://your.org/[Your.Org]
 
-New official mirrors are always welcome. We have noted the benefits of hosting single mirrors at Internet Exchange Points globally, as evidenced by our existing mirrors in Australia, Brazil, and South Africa.
+New official mirrors are always welcome.
+We have noted the benefits of hosting single mirrors at Internet Exchange Points globally, as evidenced by our existing mirrors in Australia, Brazil, and South Africa.
 If you are affiliated with or know of any organizations willing to sponsor a single mirror server, please contact us.
 We are particularly interested in locations on the United States West Coast and throughout Europe.
 
