handbook/dtrace: Add Out-of-Kernel Modules info
Reviewed by:	gnn

--- a/documentation/content/en/books/handbook/dtrace/_index.adoc
+++ b/documentation/content/en/books/handbook/dtrace/_index.adoc
@@ -153,6 +153,19 @@ This language is called the D language and it is very similar to C++.
 An in depth discussion of the language is beyond the scope of this document.
 It is covered extensively in the http://www.dtrace.org/guide[Illumos Dynamic Tracing Guide].
 
+[[dtrace-out-of-kernel]]
+== Enabling DTrace in Out-of-Kernel Modules
+
+To add DTrace support to an out-of-kernel module, which is useful for development and debugging, include the following line in the module's Makefile:
+
+[.programlisting]
+....
+CFLAGS+= -DKDTRACE_HOOKS
+....
+
+This flag enables DTrace hooks during compilation, allowing for advanced debugging and monitoring of the module.
+Ensure to recompile the module after this modification to activate DTrace functionality.
+
 [[dtrace-using]]
 == Using DTrace
 
