Status/2024Q1/bhyve.adoc: Fix a header

--- a/website/content/en/status/report-2024-01-2024-03/bhyve.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/bhyve.adoc
@@ -56,7 +56,7 @@ Patches, suggestions, feedback, etc. are all very much welcome!
 
 If you want to know more about our work, come join us at one of Michael Dexter's weekly bhyve production users calls or reach me mailto:freebsd@ny-central.org[by email].
 
-==== Documentation ===
+==== Documentation
 
 We managed to update a few parts of the Handbook and Porter's Handbook (thanks to mailto:emaste@FreeBSD.org[Ed Maste], mailto:jrm@FreeBSD.org[Joseph Mingrone], mailto:pauamma@gundo.com[Pau Amma], and mailto:rgrimes@FreeBSD.org[Rodney W. Grimes]):
 
