Status/2024Q1/pkgmgr.adoc: Fixes
- Fix lists syntax.
- Use mailto macro for pkgmgr@.

--- a/website/content/en/status/report-2024-01-2024-03/portmgr.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/portmgr.adoc
@@ -20,40 +20,40 @@ The number of ports also increased (up from 31,942).
 
 In Q1 there were around 14,127 commits to main:
 The most active committers were:
-2934 sunpoet
-2676 bofh
-1297 yuri
-748 eduardo
-545 jbeich
-347 arrowd
-233 diizzy
-195 yasu
-170 ehaupt
-164 wen
+* 2934 sunpoet
+* 2676 bofh
+* 1297 yuri
+* 748 eduardo
+* 545 jbeich
+* 347 arrowd
+* 233 diizzy
+* 195 yasu
+* 170 ehaupt
+* 164 wen
 
 A lot has happened in the ports tree in the last quarter, an excerpt of the major software upgrades are:
-- pkg 1.21.0
-- New USES: ocaml
-- Default version of gcc switched to 13
-- Default version of ruby switched to 3.2
-- Default version of lazarus switched to 3.2.0
-- Default version of go switched to 1.21
-- Chromium updated to 123.0.6312.105
-- Electron-28 updated to 28.2.10
-- Electron-27 updated to 27.3.9
-- Firefox updated to 124.0.2
-- Firefox-esr updated to 115.9.1
-- KDE updated to Frameworks 5 5.115, Frameworks 6 to 6.0.0 Plasma Desktop 5 to 5.27.11, Plasma Desktop 6 to 6.0.2
-- Qt5 updated to 5.15.13
-- Qt6 updated to 6.6.3
-- Python updated to 3.11.9, 3.10.14 and 3.8.10
-- Ruby updated to 3.2.3
-- Rust updated to 1.77.0
-- SDL updated to 2.30.2
-- Sway updated to 1.9
-- wlroots updated to 1.17.2
-- Wine updated to 9.0
-- Xorg server updated to 0.17.2
+* pkg 1.21.0
+* New USES: ocaml
+* Default version of gcc switched to 13
+* Default version of ruby switched to 3.2
+* Default version of lazarus switched to 3.2.0
+* Default version of go switched to 1.21
+* Chromium updated to 123.0.6312.105
+* Electron-28 updated to 28.2.10
+* Electron-27 updated to 27.3.9
+* Firefox updated to 124.0.2
+* Firefox-esr updated to 115.9.1
+* KDE updated to Frameworks 5 5.115, Frameworks 6 to 6.0.0 Plasma Desktop 5 to 5.27.11, Plasma Desktop 6 to 6.0.2
+* Qt5 updated to 5.15.13
+* Qt6 updated to 6.6.3
+* Python updated to 3.11.9, 3.10.14 and 3.8.10
+* Ruby updated to 3.2.3
+* Rust updated to 1.77.0
+* SDL updated to 2.30.2
+* Sway updated to 1.9
+* wlroots updated to 1.17.2
+* Wine updated to 9.0
+* Xorg server updated to 0.17.2
 
 
-During the last quarter, pkgmgr@ ran 17 exp-runs to test various ports upgrades, updates to default versions of ports, subpackage support and base system changes.
+During the last quarter, mailto:pkgmgr@FreeBSD.org[FreeBSD Packages Management Team] ran 17 exp-runs to test various ports upgrades, updates to default versions of ports, subpackage support and base system changes.
