Status/2024Q1: Add some mailto macros

--- a/website/content/en/status/report-2024-01-2024-03/core.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/core.adoc
@@ -21,5 +21,5 @@ releases.
 
 ==== Commit bits
 
-* Core approved the src commit bit for Bojan Novković (bnovkov@)
-* Core reactivated the src commit bits for Mark Peek (mp@),Mark Murray (markm@), and Lawrence Stewart (lstewart@)
+* Core approved the src commit bit for mailto:bnovkov@FreeBSD.org[Bojan Novković]
+* Core reactivated the src commit bits for mailto:mp@FreeBSD.org[Mark Peek], mailto:markm@FreeBSD.org[Mark Murray], and mailto:lstewart@FreeBSD.org[Lawrence Stewart]
