--- a/website/content/en/status/report-2024-01-2024-03/doceng.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/doceng.adoc
@@ -14,12 +14,12 @@ Link: link:https://www.freebsd.org/administration/#t-doceng[Documentation Engine
 
 Contact: FreeBSD Doceng Team <doceng@FreeBSD.org>
 
-The doceng@ team is a body to handle some of the meta-project issues associated with the FreeBSD Documentation Project; for more information, see link:https://www.freebsd.org/internal/doceng/[FreeBSD Doceng Team Charter].
+The mailto:doceng@FreeBSD.org[doceng team] is a body to handle some of the meta-project issues associated with the FreeBSD Documentation Project; for more information, see link:https://www.freebsd.org/internal/doceng/[FreeBSD Doceng Team Charter].
 
 During the last quarter:
 
-trasz@'s doc commit bit was taken for safekeeping.
-trhodes@'s doc commit bit was taken for safekeeping.
+mailto:trasz@FreeBSD.org[Edward Tomasz Napierała]'s doc commit bit was taken for safekeeping.
+mailto:trhodes@FreeBSD.org[Tom Rhodes]'s doc commit bit was taken for safekeeping.
 
 ==== FreeBSD Translations on Weblate
 
