Status/2024Q1/bsdinstall.adoc: Add mailto macros

--- a/website/content/en/status/report-2024-01-2024-03/bsdinstall.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/bsdinstall.adoc
@@ -60,7 +60,7 @@ It is true that the current code base suffers from a number of issues and limita
 The lack of a graphical installer is one of many symptoms, which range from the lack of recovery from errors, of navigability to previous steps, of a general vision of the installation progress, or of a network-based installer.
 In the meantime, this is the installer we have and are familiar with, and I think it can still be saved and improved.
 
-Special thanks go to Ed Maste and Joe Mingrone for the opportunity, and to Philippe Audeoud, Tobias Berner, Olivier Certner, Jessica Clarke, Olivier Cochard-Labbe, Baptiste Daroussin, Brad Davis, Michael Dexter, Li-Wen Hsu, Mateusz Piotrowski, Alfonso Siciliano, Emmanuel Vadot, and Robert Watson for the feedback, reviews, and encouragements.
+Special thanks go to mailto:emaste@FreeBSD.org[Ed Maste] and mailto:jrm@FreeBSD.org[Joe Mingrone] for the opportunity, and to mailto:jadawin@FreeBSD.org[Philippe Audeoud], mailto:tcberner[Tobias C. Berner], mailto:olce@FreeBSD.org[Olivier Certner], mailto:jrtc27@FreeBSD.org[Jessica Clarke], mailto:olivier@FreeBSD.org[Olivier Cochard-Labbé], mailto:bapt@FreeBSD.org[Baptiste Daroussin], mailto:brd@FreeBSD.org[Brad Davis], mailto:dexter@FreeBSD.org[Michael Dexter], mailto:lwhsu@FreeBSD.org[Li-Wen Hsu], mailto:0mp@FreeBSD.org[Mateusz Piotrowski], mailto:asiciliano@FreeBSD.org[Alfonso Siciliano], mailto:manu@FreeBSD.org[Emmanuel Vadot], and mailto:rwatson@FreeBSD.org[Robert Watson] for the feedback, reviews, and encouragements.
 (If I missed anyone, you know I did not mean to!)
 
 Sponsor: The FreeBSD Foundation
