status: 2024q1: bsdinstall: fix a link
Fix a link:https:// … URL: link:https: line.

--- a/website/content/en/status/report-2024-01-2024-03/bsdinstall.adoc
+++ b/website/content/en/status/report-2024-01-2024-03/bsdinstall.adoc
@@ -3,7 +3,7 @@
 Links: +
 link:https://people.defora.org/~khorben/FreeBSD/bsdinstall/bsdinstall%20-%20Now%20with%20Graphics!%20-%20AsiaBSDCon%202024%20-%20WIP%20Session.pdf[Slides from AsiaBSDCon 2024] URL: link:https://people.defora.org/~khorben/FreeBSD/bsdinstall/bsdinstall%20-%20Now%20with%20Graphics!%20-%20AsiaBSDCon%202024%20-%20WIP%20Session.pdf[] +
 link:https://github.com/khorben/gbsddialog[gbsddialog] URL: link:https://github.com/khorben/gbsddialog[] +
-link:https://youtu.be/jm6byc7N2O4[preview video] URL: link:https://youtu.be/jm6byc7N2O4
+link:https://youtu.be/jm6byc7N2O4[preview video] URL: link:https://youtu.be/jm6byc7N2O4[]
 
 Contact: Pierre Pronchery <pierre@freebsdfoundation.org>
 
